Fixed java node issues and some CSS issues.